--- a/build.html
+++ b/build.html
@@ -1,36 +1,58 @@
 {{#if items.length}}
-<div data-list-thumb-s-id="{{id}}" class="list list-thumb-s">
-    <ul>
-      {{#each items}}
-      <li class="{{#if linkAction}} linked{{/if}}" data-thumb-s-item-id="{{id}}">
-        <div class="list-image" style="background-color: {{color}};{{#if imageConf}} background-image: url('{{imageConf.url}}'){{/if}}"><p class=hidden></p></div>
-        <div class="list-desc">
-          <p class="list-title">{{title}}</p>
-          {{#if description}}<p>{{nl2br description}}</p>{{/if}}
-        </div>
-      </li>
-      {{/each}}
+<div data-list-thumb-s-id="{{id}}" data-filter-id="{{id}}" data-list-thumb-s-uuid="{{uuid}}" class="list list-thumb-s {{#if swipeToSave}}list-swipe-save{{/if}}">
+  {{#if swipeToSave}}
+  <div class="filter-wrapper">
+    <ul class="list-save-filter">
+      <li class="filter-{{id}} active" data-filter="all">All</li>
+      <li class="filter-{{id}}" data-filter=".saved">{{swipeToSaveLabel}}</li>
     </ul>
+  </div>
+  <div class="label-instruction">
+    <small class="label label-all">Swipe Right to add to <strong>{{swipeToSaveLabel}}</strong> &rarr;</small>
+    <small class="label label-my">&larr; Swipe Left to remove from <strong>{{swipeToSaveLabel}}</strong></small>
+    <small class="label label-empty">Nothing is found in <strong>{{swipeToSaveLabel}}</strong>. Swipe Right (&rarr;) on any list item to save it in <strong>{{swipeToSaveLabel}}</strong></small>
+  </div>
+  {{/if}}
+  <ul class="list-holder {{#if swipeToSave}}list-swipe{{/if}}">
+    {{#each items}}
+    <li class="{{#if linkAction}} linked{{/if}}" data-thumb-s-item-id="{{id}}">
+      <div class="list-image" style="background-color: {{color}};{{#if imageConf}} background-image: url('{{imageConf.url}}'){{/if}}">
+        <p class=hidden></p>
+      </div>
+      <div class="list-desc">
+        <p class="list-title">{{title}}</p>
+        {{#if description}}
+        <p>{{nl2br description}}</p>{{/if}}
+      </div>
+    </li>
+    {{/each}}
+  </ul>
 </div>
 {{else}}
 <div class="list list-thumb-s placeholder">
   <ul>
     <li class="">
-      <div class="list-image" style="background-color: #c7c7c7;"><p class="hidden"></p></div>
+      <div class="list-image" style="background-color: #c7c7c7;">
+        <p class="hidden"></p>
+      </div>
       <div class="list-desc">
         <p class="list-title">List item 1</p>
         <p>This is a default item, edit your list's settings to configure your content. Don't forget to view your app on different devices by changing the device preview.</p>
       </div>
     </li>
     <li class="">
-      <div class="list-image" style="background-color: #c7c7c7;"><p class="hidden"></p></div>
+      <div class="list-image" style="background-color: #c7c7c7;">
+        <p class="hidden"></p>
+      </div>
       <div class="list-desc">
         <p class="list-title">List item 2</p>
         <p>This is a default item, edit your list's settings to configure your content. Don't forget to view your app on different devices by changing the device preview.</p>
       </div>
     </li>
     <li class="">
-      <div class="list-image" style="background-color: #c7c7c7;"><p class="hidden"></p></div>
+      <div class="list-image" style="background-color: #c7c7c7;">
+        <p class="hidden"></p>
+      </div>
       <div class="list-desc">
         <p class="list-title">List item 3</p>
         <p>This is a default item, edit your list's settings to configure your content. Don't forget to view your app on different devices by changing the device preview.</p>
