--- a/interface.html
+++ b/interface.html
@@ -1,127 +1,166 @@
-
-  <form class="form-horizontal">
+<form class="form-horizontal">
     <div id="testelement" class="hidden" style="background-color: white"></div>
     <header>
-      <p>Configure your list</p>
-      <a id="help_tip" href="#">Need help?</a>
+        <p>Configure your list</p>
+        <a id="help_tip" href="#">Need help?</a>
     </header>
+
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active" id="list-items-control"><a href="#list-items" aria-controls="list-items" role="tab" data-toggle="tab">List items</a></li>
+        <li role="presentation" id="swipe-save-control"><a href="#swipe-save" aria-controls="swipe-save" role="tab" data-toggle="tab">Swipe to Save</a></li>
+    </ul>
+
     <div id="image-manager"></div>
 
     <div class="tab-content">
-      <div class="tab-pane-content">
-        <div class="panel-group ui-sortable" id="accordion">
-          {{#if items.length}}
-            {{#each items}}
-              <div class="panel panel-default" data-id="{{id}}">
-                <div class="panel-heading ui-sortable-handle">
-                  <h4 class="panel-title" data-toggle="collapse" data-parent="#accordion" data-target="#collapse-{{id}}">
-                    <div class="screen-reorder-handle">
-                      <i class="fa fa-ellipsis-v"></i><i class="fa fa-ellipsis-v"></i>
-                    </div>
-                    <span class="fa fa-chevron-down"></span>
-                    <span class="panel-title-text">{{~title~}}</span>
-                  </h4>
-                  <a href="#"><span class="icon-delete fa fa-trash"></span></a>
-                </div>
-                <div id="collapse-{{id}}" class="panel-collapse collapse in">
-                  <div class="panel-body">
-                    <div class="form-horizontal">
-
-                      <div class="form-group">
-                        <div class="col-sm-4 control-label">
-                          <label for="list-item-title-{{id}}">Title</label>
-                        </div>
-                        <div class="col-sm-8">
-                          <input type="text" class="form-control list-item-title" id="list-item-title-{{id}}" name="list-item-title-{{id}}" placeholder="Enter title" value="{{~title~}}">
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <div class="col-sm-4 control-label">
-                          <label for="list-item-desc-{{id}}">Description</label>
-                        </div>
-                        <div class="col-sm-8">
-                          <textarea class="form-control list-item-desc" id="list-item-desc-{{id}}" name="list-item-desc-{{id}}" rows="2"
-                                    {{#unless description}}placeholder="Enter description" >{{else}} >{{~description~}} {{/unless}}</textarea>
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <div class="col-sm-4 control-label">
-                          <label for="list-item-link-{{id}}">Link</label>
-                        </div>
-                        <div class="col-sm-8">
-                          <div class="btn btn-default list-item-set-link {{#if linkAction}} hidden{{/if}}">Add Link</div>
-                          <div class="btn btn-link text-danger link-remove {{#unless linkAction}} hidden {{/unless}}">Remove Link</div>
-                          <div class="add-link"></div>
-                        </div>
-                      </div>
-
-                      <h2><small>Configure item thumbnail</small></h2>
-                      <div class="row">
-                        <div class="col-xs-12">
-                          <p class="help-block">Adding an image will override the color chosen. Whoever if the image has transparency, the color will be shown underneath.</p>
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <div class="col-sm-4 control-label">
-                          <label>Image area colour</label>
-                        </div>
-                        <div class="col-sm-8">
-                          <div class="input-group">
-                            <div class="input-group-addon" style="background-color:{{color}}">&nbsp;&nbsp;&nbsp;</div>
-                            <input type="text" id ="list-item-color-{{id}}" class="form-control list-item-color" value="{{color}}" {{#if imageConf}}disabled{{/if}}>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <div class="col-sm-4 control-label">
-                          <label for="list-item-image-{{id}}">Image</label>
-                        </div>
-                        <div class="col-sm-8">
-                          <div class="add-image-holder ">
-                            <div class="btn btn-default list-item-set-image add-image">{{#unless imageConf}}Add Image{{else}}Replace Image {{/unless}}</div>
-                            <div class="thumb-holder {{#unless imageConf}}hidden{{/unless}}">
-                              <div class="thumb-image"><img src="{{imageConf.thumbnail}}" /></div>
-                              <div class="btn btn-link text-danger image-remove">Remove Image</div>
+        <div role="tabpanel" class="tab-pane tab-pane-content active {{#unless items.length}}list-items-empty{{/unless}}" id="list-items">
+            <div class="panel-group ui-sortable" id="accordion">
+                    {{#each items}}
+                        <div class="panel panel-default" data-id="{{id}}">
+                            <div class="panel-heading ui-sortable-handle">
+                                <h4 class="panel-title" data-toggle="collapse" data-parent="#accordion" data-target="#collapse-{{id}}">
+                                  <div class="screen-reorder-handle">
+                                    <i class="fa fa-ellipsis-v"></i><i class="fa fa-ellipsis-v"></i>
+                                  </div>
+                                  <span class="fa fa-chevron-down"></span>
+                                  <span class="panel-title-text">{{~title~}}</span>
+                                </h4>
+                                <a href="#"><span class="icon-delete fa fa-trash"></span></a>
                             </div>
-                          </div>
-                          <div class="list-item-image"></div>
+                            <div id="collapse-{{id}}" class="panel-collapse collapse in">
+                                <div class="panel-body">
+                                    <div class="form-horizontal">
+
+                                        <div class="form-group">
+                                            <div class="col-sm-4 control-label">
+                                                <label for="list-item-title-{{id}}">Title</label>
+                                            </div>
+                                            <div class="col-sm-8">
+                                                <input type="text" class="form-control list-item-title" id="list-item-title-{{id}}" name="list-item-title-{{id}}" placeholder="Enter title" value="{{~title~}}">
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <div class="col-sm-4 control-label">
+                                                <label for="list-item-desc-{{id}}">Description</label>
+                                            </div>
+                                            <div class="col-sm-8">
+                                                <textarea class="form-control list-item-desc" id="list-item-desc-{{id}}" name="list-item-desc-{{id}}" rows="2" {{#unless description}} placeholder="Enter description">{{else}} >{{~description~}} {{/unless}}</textarea>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <div class="col-sm-4 control-label">
+                                                <label for="list-item-link-{{id}}">Link</label>
+                                            </div>
+                                            <div class="col-sm-8">
+                                                <div class="btn btn-default list-item-set-link {{#if linkAction}} hidden{{/if}}">Add Link</div>
+                                                <div class="btn btn-link text-danger link-remove {{#unless linkAction}} hidden {{/unless}}">Remove Link</div>
+                                                <div class="add-link"></div>
+                                            </div>
+                                        </div>
+
+                                        <h2><small>Configure item thumbnail</small></h2>
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <p class="help-block">Adding an image will override the color chosen. Whoever if the image has transparency, the color will be shown underneath.</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <div class="col-sm-4 control-label">
+                                                <label>Image area colour</label>
+                                            </div>
+                                            <div class="col-sm-8">
+                                                <div class="input-group">
+                                                    <div class="input-group-addon" style="background-color:{{color}}">&nbsp;&nbsp;&nbsp;</div>
+                                                    <input type="text" id="list-item-color-{{id}}" class="form-control list-item-color" value="{{color}}" {{#if imageConf}} disabled {{/if}}>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <div class="col-sm-4 control-label">
+                                                <label for="list-item-image-{{id}}">Image</label>
+                                            </div>
+                                            <div class="col-sm-8">
+                                                <div class="add-image-holder ">
+                                                    <div class="btn btn-default list-item-set-image add-image">
+                                                        {{#unless imageConf}}Add Image {{else}}Replace Image {{/unless}}
+                                                    </div>
+                                                    <div class="thumb-holder {{#unless imageConf}}hidden{{/unless}}">
+                                                        <div class="thumb-image"><img src="{{imageConf.thumbnail}}" /></div>
+                                                        <div class="btn btn-link text-danger image-remove">Remove Image</div>
+                                                    </div>
+                                                </div>
+                                                <div class="list-item-image"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                      </div>
-                    </div>
-                  </div>
+                    {{/each}}
+            </div>
+
+            <div class="panels-empty">
+              <p><strong>Create as many list items as you want</strong><br>Click the button below to get started</p>
+            </div>
+
+            <div class="controls clearfix">
+              <div class="btn-holder">
+                <div class="btn btn-default new-list-item">Add new item</div>
+              </div>
+              <div class="btn btn-link expand-items">Expand/Collapse All</div>
+            </div>
+            <div class="controls controls-sticky">
+              <div  class="btn-holder">
+                <div class="btn btn-default new-list-item">Add new item</div>
+              </div>
+              <div class="btn btn-link expand-items">Expand/Collapse All</div>
+            </div>
+        </div>
+        <div role="tabpanel" class="tab-pane tab-pane-content" id="swipe-save">
+          <p>Enable <em>Swipe to Save</em> to let your users swipe on any list item to save/bookmark it for later.</p>
+
+          <div class="form-group">
+            <div class="col-sm-4 control-label">
+              <label for="swipe-to-save">Enable Swipe to Save</label>
+            </div>
+            <div class="col-sm-8">
+              <div class="radio-buttons clearfix">
+                <div class="radio">
+                  <input type="radio" id="swipe-to-save-yes" name="enable_list_saving" value="swipe-to-save-yes" {{#if swipeToSave}}checked{{/if}}>
+                  <label for="swipe-to-save-yes">
+                    Yes
+                  </label>
+                </div>
+                <div class="radio">
+                  <input type="radio" id="swipe-to-save-no" name="enable_list_saving" value="swipe-to-save-no" {{#if swipeToSave}}{{else}}checked{{/if}}>
+                  <label for="swipe-to-save-no">
+                    No
+                  </label>
                 </div>
               </div>
-            {{/each}}
+            </div>
           </div>
-        {{else}}
+
+          <div class="form-group clearfix" id="saved-list-field">
+            <div class="col-sm-4 control-label">
+              <label for="saved-list-label">Saved list name</label>
+            </div>
+            <div class="col-sm-8">
+              <input type="text" class="form-control" name="saved_list_label" id="saved-list-label" value="{{#if swipeToSaveLabel}}{{swipeToSaveLabel}}{{else}}My List{{/if}}">
+              <p class="help-block">What do you want to name the saved list? e.g. My Agenda, My Contacts etc.</p>
+            </div>
           </div>
-          <div class="panels-empty">
-            <p>Create as many list items as you want.</br>
-              Start by adding a new one by pressing the button below.</p>
-          </div>
-        {{/if}}
-        <div class="controls clearfix">
-          <div class="btn-holder">
-            <div class="btn btn-default new-list-item">Add new item</div>
-          </div>
-          <div class="btn btn-link expand-items hidden">Expand/Collapse All</div>
+
         </div>
-        <div class="controls controls-sticky">
-          <div class="btn-holder">
-            <div class="btn btn-default new-list-item">Add new item</div>
-          </div>
-          <div class="btn btn-link expand-items hidden">Expand/Collapse All</div>
-        </div>
-      </div>
+
     </div>
+</form>
 
-  </form>
-
-  <template id="template-list-item-thumb-s">
+<template id="template-list-item-thumb-s">
     <div class="panel panel-default" data-id="\{{id}}">
       <div class="panel-heading ui-sortable-handle">
         <h4 class="panel-title" data-toggle="collapse" data-parent="#accordion" data-target="#collapse-\{{id}}">
