--- a/interface.html
+++ b/interface.html
@@ -19,15 +19,15 @@
         <div class="panel panel-default" data-id="{{id}}">
           <div class="panel-heading ui-sortable-handle">
             <h4 class="panel-title" data-toggle="collapse" data-parent="#accordion" data-target="#collapse-{{id}}">
-                                  <div class="screen-reorder-handle">
-                                    <i class="fa fa-ellipsis-v"></i><i class="fa fa-ellipsis-v"></i>
-                                  </div>
-                                  <span class="fa fa-chevron-down"></span>
-                                  <span class="panel-title-text">{{~title~}}</span>
-                                </h4>
+              <div class="screen-reorder-handle">
+                <i class="fa fa-ellipsis-v"></i><i class="fa fa-ellipsis-v"></i>
+              </div>
+              <span class="fa fa-chevron-right"></span>
+              <span class="panel-title-text">{{~title~}}</span>
+            </h4>
             <a href="#"><span class="icon-delete fa fa-trash"></span></a>
           </div>
-          <div id="collapse-{{id}}" class="panel-collapse collapse in">
+          <div id="collapse-{{id}}" class="panel-collapse collapse">
             <div class="panel-body">
               <div class="form-horizontal">
 
