Tweaked title on the component

--- a/interface.html
+++ b/interface.html
@@ -1,7 +1,7 @@
 <form class="form-horizontal">
   <div id="testelement" class="hidden" style="background-color: white"></div>
   <header>
-    <p>Configure your list</p>
+    <p>Configure your list (small thumbnails)</p>
     <a id="help_tip" href="#">Need help?</a>
   </header>
 
