--- a/interface.html
+++ b/interface.html
@@ -53,24 +53,6 @@
 
                 <div class="form-group">
                   <div class="col-sm-4 control-label">
-                    <label>Image area color</label>
-                  </div>
-                  <div class="col-sm-8">
-                    <div class="input-group" colorpicker-component>
-                      <div class="input-group-addon"><i style="background-color:{{ color }}"></i></div>
-                      <input type="text" id="list-item-color-{{id}}" class="form-control list-item-color" value="{{color}}">
-                    </div>
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col-xs-12">
-                    <p class="help-block">Adding an icon won't replace the chosen color. The color will be shown underneath the icon.</p>
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="col-sm-4 control-label">
                     <label for="list-item-image-{{id}}">Icon</label>
                   </div>
                   <div class="col-sm-8">
@@ -88,7 +70,7 @@
 
                 <div class="row">
                   <div class="col-xs-12">
-                    <p class="help-block">Adding an image will override the chosen color and icon. However if the image has transparency, the color will be shown underneath.</p>
+                    <p class="help-block">Adding an image will override the chosen icon.</p>
                   </div>
                 </div>
 
@@ -207,24 +189,6 @@
 
             <div class="form-group">
               <div class="col-sm-4 control-label">
-                <label>Image area color</label>
-              </div>
-              <div class="col-sm-8">
-                <div class="input-group" colorpicker-component>
-                  <div class="input-group-addon"><i style="background-color:#00abd2"></i></div>
-                  <input type="text" id="list-item-color-\{{id}}" class="form-control list-item-color" value="#00abd2">
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-xs-12">
-                <p class="help-block">Adding an icon won't replace the chosen color. The color will be shown underneath the icon.</p>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <div class="col-sm-4 control-label">
                 <label for="list-item-image-\{{id}}">Icon</label>
               </div>
               <div class="col-sm-8">
@@ -242,7 +206,7 @@
 
             <div class="row">
               <div class="col-xs-12">
-                <p class="help-block">Adding an image will override the chosen color chosen. However if the image has transparency, the color will be shown underneath.</p>
+                <p class="help-block">Adding an image will override the chosen icon.</p>
               </div>
             </div>
 
