--- a/interface.html
+++ b/interface.html
@@ -2,7 +2,7 @@
   <div id="testelement" class="hidden" style="background-color: white"></div>
   <header>
     <p>Configure your list (small thumbnails)</p>
-    <a id="help_tip" href="#">Need help?</a>
+    <a href="https://help.fliplet.com/article/165-list-components">Need help?</a>
   </header>
 
   <ul class="nav nav-tabs" role="tablist">
