Updated need help link

--- a/interface.html
+++ b/interface.html
@@ -2,7 +2,7 @@
   <div id="testelement" class="hidden" style="background-color: white"></div>
   <header>
     <p>Configure your list (small thumbnails)</p>
-    <a href="https://help.fliplet.com/article/165-list-components">Need help?</a>
+    <a href="https://help.fliplet.com/article/165" target="_blank">Need help?</a>
   </header>
 
   <ul class="nav nav-tabs" role="tablist">
