Change need help link

--- a/interface.html
+++ b/interface.html
@@ -1,8 +1,12 @@
 <form class="form-horizontal">
   <div id="testelement" class="hidden" style="background-color: white"></div>
   <header>
-    <p>Configure your list (small thumbnails)</p>
-    <a href="https://help.fliplet.com/article/165" target="_blank">Need help?</a>
+    <p>
+      Configure your list (small thumbnails)
+      <a href="https://help.fliplet.com/list-components/" class="help-icon" target="_blank">
+        <i class="fa fa-question-circle-o"></i>
+      </a>
+    </p>
   </header>
 
   <ul class="nav nav-tabs" role="tablist">
